[WIP] improve recursive cte
Signed-off-by: Seaven <seaven_7@qq.com>